<resources>
    <string name="app_name">TimelapseHelper</string>
    <string name="action_settings">Settings</string>
    <string name="seconds_abbreviated">s</string>
    <string name="frame">frame</string>
    <string name="frames">frames</string>
    <string name="start_time">Start Time: %s</string>
    <string name="adding_time_lapse_message">A new time-lapse setting has been added.</string>
    <string name="deleted_time_lapse">Time-lapse setting deleted.</string>
    <string name="camera_num">Camera %d</string>
    <string name="play">Start</string>
    <string name="pause">Pause</string>
    <string name="stop">Stop</string>
    <string name="more">More</string>
    <string name="delete">Delete</string>
    <string name="custom_spf">Custom Seconds per Frame</string>
    <string name="choose_a_preset">Or choose a preset rate below</string>
    <string name="cannot_change_spf_while_running">Frame-rate cannot be changed on an active time-lapse.</string>
    <string name="timelapse_will_render">%3$d frames will render %1$s seconds of video at %2$s fps</string>
    <string name="render_eta">ETA of %1$s (~%2$d minutes) for %3$d seconds of rendered video.</string>
    <string name="statistics">Statistics</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="deleting_cannot_be_undone">Deleting this item cannot be undone.</string>

    <string name="desc_half_second">0.5 - Driving time-lapse, creepy crawlies, surfer on a wave, any sports</string>
    <string name="desc_1">1 - Analogue clock face, baking cookies</string>
    <string name="desc_2">2 - Fast moving clouds, crowds of people, rush hour traffic, people walking along the street</string>
    <string name="desc_5">5 - Clouds moving normally, sunrise or sunset</string>
    <string name="desc_10">10 - Slow moving clouds, sunrise, sunset, waves on the beach</string>
    <string name="desc_30">30 - Path of the sun on a clear day, moving shadows, night landscapes, stars and the moon</string>
    <string name="desc_60">60 - Moving plants and trees, construction site over a day</string>

    <string-array name="preset_spf">
        <item>@string/desc_half_second</item>
        <item>@string/desc_1</item>
        <item>@string/desc_2</item>
        <item>@string/desc_5</item>
        <item>@string/desc_10</item>
        <item>@string/desc_30</item>
        <item>@string/desc_60</item>
    </string-array>

</resources>
