<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/margin">

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:hint="@string/camera_num"
        android:padding="@dimen/half_margin"
        android:textAppearance="?android:textAppearanceMedium" />


    <TextView
        android:id="@+id/frames_elapsed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/seconds_per_frame_layout"
        android:layout_alignEnd="@+id/time_elapsed"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/seconds_per_frame_layout"
        android:layout_below="@id/name"
        android:gravity="center"
        android:minWidth="70sp"
        android:textAppearance="?android:textAppearanceLarge"
        tools:text="748" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/frames_elapsed"
        android:layout_marginTop="-10dp"
        android:layout_alignEnd="@id/frames_elapsed"
        android:layout_alignStart="@id/frames_elapsed"
        android:gravity="center"
        android:minWidth="70sp"
        android:text="@string/frames"
        android:textAppearance="?android:textAppearanceSmall"
        android:textSize="@dimen/text_size_tiny" />


    <TextView
        android:id="@+id/time_elapsed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@id/frames_elapsed"
        android:layout_marginTop="@dimen/margin"
        android:gravity="center"
        android:textAppearance="?android:textAppearanceMedium"
        tools:text="00:01:23:33" />

    <LinearLayout
        android:id="@+id/seconds_per_frame_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/name"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/seconds_per_frame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:editTextBackground"
            android:minWidth="40sp"
            android:textAppearance="?android:textAppearanceLarge"
            tools:text="5" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:text="@string/seconds_abbreviated"
                android:textAppearance="?android:textAppearanceSmall"
                android:textSize="@dimen/text_size_tiny" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/frame"
                android:textAppearance="?android:textAppearanceSmall"
                android:textSize="@dimen/text_size_tiny" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/start_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/time_elapsed"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/seconds_per_frame_layout"
        android:gravity="center"
        android:textAppearance="?android:textAppearanceMedium"
        tools:text="Start Time:1:23:33" />

    <LinearLayout
        android:layout_width="76dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/seconds_per_frame_layout"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/name"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:contentDescription="@string/play"
            android:src="@drawable/ic_play"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/pause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:contentDescription="@string/pause"
            android:src="@drawable/ic_pause" />

        <ImageView
            android:id="@+id/stop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:layout_marginStart="12dp"
            android:contentDescription="@string/stop"
            android:src="@drawable/ic_stop" />
    </LinearLayout>

</RelativeLayout>